[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sbijax"
description = " Simulation-based inference in JAX"
authors = [{name = "Simon Dirmeier", email = "simd23@pm.me"}]
readme = "README.md"
license = { file = "LICENCE" }
keywords = ["sbi", "abc", "simulation-based inference", "approximate Bayesian computation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.12"
dependencies = [
    "arviz==1.0.0",
    "diffrax>=0.7.2",
    "blackjax>=1.3",
    "dm-haiku>=0.0.16",
    "einops>=0.8.2",
    "jrnmm==0.1.1.post2",
    "matplotlib>=3.10.8",
    "optax>=0.2.7",
    "seaborn>=0.13.2",
    "surjectors>=0.3.3",
    "tqdm>=4.64.1",
    "ipython>=9.11.0",
    "jaxlib==0.8.1",
    "jax==0.8.1",
    "grain>=0.2.16",
    "tfp-nightly[jax]>=0.26.0.dev20260318",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "gitlint>=0.19.1",
    "jupyter>=1.1.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
]
examples = [
    "matplotlib>=3.10.8",
]

[project.urls]
Homepage = "https://github.com/dirmeier/sbijax"
Documentation = "https://sbijax.readthedocs.io"

[tool.setuptools]
packages = ["sbijax"]

[tool.setuptools.dynamic]
version = {attr = "sbijax.__init__.__version__"}

[tool.bandit]
skips = ["B101"]

[tool.mypy]
show_error_codes = true
no_implicit_optional = true

[tool.pytest]
addopts = ["-v", "--doctest-modules", "--cov=./sbijax", "--cov-report=xml"]
testpaths = [
    "sbijax"
]

[tool.ruff]
indent-width = 2
line-length = 80
exclude = ["*_test.py", "docs/**", "examples/**", "manuscript+supplement/**"]

[tool.ruff.lint]
select = ["E", "F"]
extend-select = [
  "UP", "D", "I", "PL", "S"
]
ignore=["S101", "F841", "PLR2004"]

[tool.ruff.lint.pydocstyle]
convention= 'google'

[tool.uv]
upgrade-package = ["jax", "jaxlib", "dm-haiku"]
