[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sbijax"
description = " Simulation-based inference in JAX"
authors = [{name = "Simon Dirmeier", email = "simd23@pm.me"}]
readme = "README.md"
license = { file = "LICENCE" }
keywords = ["sbi", "abc", "simulation-based inference", "approximate Bayesian computation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.12"
dependencies = [
    "arviz==1.0.0",
    "diffrax>=0.7.2",
    "blackjax>=1.3",
    "dm-haiku>=0.0.16",
    "einops>=0.8.2",
    "jrnmm==0.1.1.post2",
    "matplotlib>=3.10.8",
    "optax>=0.2.7",
    "seaborn>=0.13.2",
    "surjectors>=0.3.3",
    "tqdm>=4.64.1",
    "ipython>=9.11.0",
    "jaxlib==0.8.1",
    "jax==0.8.1",
    "grain>=0.2.16",
    "tfp-nightly[jax]>=0.26.0.dev20260318",
]
dynamic = ["version"]

[project.optional-dependencies]
all = []

[dependency-groups]
dev = [
    "gitlint>=0.19.1",
    "jupyter>=1.1.1",
    "mypy>=2.1.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
]
docs = [
    "ipykernel>=7.2.0",
    "ipython>=9.11.0",
    "nbsphinx>=0.9.8",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "session-info>=1.0.1",
    "sphinx>=9.1.0",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-autodoc-typehints>=3.9.8",
    "sphinx-book-theme==1.1.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.7.0",
    "sphinx-fontawesome>=0.0.6",
    "sphinx-gallery>=0.20.0",
    "sphinx-math-dollar>=1.3",
    "sphinxcontrib-bibtex>=2.6.5",
    "sphinxcontrib-fulltoc>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/dirmeier/sbijax"
Documentation = "https://sbijax.readthedocs.io"

[tool.setuptools]
packages = ["sbijax"]

[tool.setuptools.dynamic]
version = {attr = "sbijax.__init__.__version__"}

[tool.bandit]
skips = ["B101"]

[tool.mypy]
show_error_codes = true
warn_unused_configs = true
no_implicit_optional = true
disallow_untyped_defs = false
ignore_missing_imports = true
disallow_untyped_calls = false


[tool.pytest.ini_options]
addopts = [
    "-v",
    "--doctest-modules",
    "--cov=sabc",
    "--cov-report=xml",
    "--strict-markers",
    "--strict-config",
    "-ra"
]
testpaths = [
    "sbijax"
]

[tool.ruff]
indent-width = 2
line-length = 80
exclude = ["docs/**"]

[tool.ruff.lint]
extend-select = [
    "A",    # Builtins shadowing
    "ARG",  # Unused arguments (New)
    #"ANN",  # Type annotations
    "B",    # Bugbear (common bugs)
    "C4",   # List/dict/set comprehensions
    "D",    # Docstrings
    "I",    # Isort (import sorting)
    # "N",    # PEP8 Naming conventions
    "PL",   # Pylint rules
    # "PTH",  # Pathlib usage (New)
    #"RET",  # Return statements (New)
    # "RUF",  # Ruff-specific checks (New)
    "S",    # Security checks
    "SIM",  # Code simplification
    "TCH",  # Type-checking blocks
    "UP",   # Pyupgrade (modern syntax)
]
ignore=["S101", "F841", "PLR2004"]

[tool.ruff.lint.flake8-unused-arguments]
# *args/**kwargs only exist to satisfy uniform module/callback signatures.
ignore-variadic-names = true

[tool.ruff.lint.per-file-ignores]
"**/*_test.py" = ["D103", "B007", "B023", "ARG001", "ARG002"]
"**/conftest.py" = ["ARG001"]
"examples/**" = ["D103", "B007", "ARG001"]
"experiments/**" = ["D103", "PLR0913", "PLC0415", "S603", "PLC0206"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv]
upgrade-package = ["jax", "jaxlib", "dm-haiku"]
